custom module dir added in gitignore

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "acquia/blt": "^13.0",
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.3",
+        "drupal/config_split": "^2.0@RC",
         "drupal/core-composer-scaffold": "^9.0",
         "drupal/core-project-message": "^9.0",
         "drupal/core-recommended": "^9.0",
