--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,7 +13,7 @@ database:
     version: "10.4"
 nfs_mount_enabled: false
 mutagen_enabled: false
-omit_containers: []
+omit_containers: [dba]
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
