coder module added and ddev phpcs and phpcbf command added

--- a/composer.json
+++ b/composer.json
@@ -103,5 +103,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drupal/coder": "^8.3"
     }
 }
