Issue fixed with config

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -202,7 +202,7 @@ nodejs_version: "16"
 # will be available on the local network if the host firewall
 # allows it.
 
-# default_container_timeout: 120
+default_container_timeout: 180
 # The default time that ddev waits for all containers to become ready can be increased from
 # the default 120. This helps in importing huge databases, for example.
 
