--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,7 @@
         "drupal/config_split": "^2.0@RC",
         "drupal/core-composer-scaffold": "^9.0",
         "drupal/core-project-message": "^9.0",
-        "drupal/core-recommended": "^9.0",
-        "drupal/devel": "^5.1",
-        "drush/drush": "^11.5"
+        "drupal/core-recommended": "^9.0"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -103,6 +101,8 @@
         }
     },
     "require-dev": {
-        "drupal/coder": "^8.3"
+        "drupal/coder": "^8.3",
+        "drupal/devel": "^5.1",
+        "drush/drush": "^11.5"
     }
 }
