--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
     "require-dev": {
         "drupal/coder": "^8.3",
         "drupal/devel": "^5.1",
-        "drush/drush": "^11.5"
+        "drush/drush": "^11.5",
+        "mglaman/drupal-check": "^1.4"
     }
 }
