Twig-cs-fixer added

--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,7 @@
         "drupal/coder": "^8.3",
         "drupal/devel": "^5.1",
         "drush/drush": "^11.5",
-        "mglaman/drupal-check": "^1.4"
+        "mglaman/drupal-check": "^1.4",
+        "vincentlanglet/twig-cs-fixer": "^0.5.0"
     }
 }
